tests/fixtures/valid/builtins/tuple.py
# Valid tuple() calls
# Auto-generated by scripts/generate_tests.py

b0_tuple_str = tuple("hello")
b1_tuple_bytes = tuple(b"hello")
b2_tuple_list = tuple([1, 2, 3])
b3_tuple_dict = tuple({"a": 1})
b4_tuple_set = tuple({1, 2, 3})

print("tuple() tests passed!")
