tests/fixtures/invalid/pow_int_bytes_set.py
# Cannot call pow() with Int, Bytes, Set[int]
x = pow(1, b"hello", {1, 2, 3})
